--- a/pages/hero-4/assets/css/style.css
+++ b/pages/hero-4/assets/css/style.css
@@ -13,9 +13,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
+    height: 300vh;
     width: 100vw;
-    background: url('../../../hero-4/assets/img/463603.jpg') no-repeat center center fixed;
+    background: url('../../../hero-4/assets/img/91002d382da1f64a470b822e88965af3.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 
@@ -39,100 +40,107 @@ h1 * {
 
 span {
     text-align: center;
+    font-size: 20px;
+    color: #3A3A3A;
 }
 
-.side-nav {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    left: 0;
-    height: 100vh;
-    justify-content: space-between;
-    background: rgb(255, 255, 255);
-    padding: 0.5rem 0;
-    align-items: center;
-    width: 80px;
-    z-index: 2;
-  }
+article {
+  position: relative;
+  border-radius: 16px;
+  background: #dfdfdf;
+  transition: all 0.4s ease-in-out;
+  overflow: hidden;
+  box-shadow: none;
+  top: 20%;
+  margin-bottom: 180rem;
+}
 
-  .side-nav {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    left: 0;
-    height: 100vh;
-    justify-content: space-between;
-    background: rgb(255, 255, 255);
-    padding: 0.5rem 0;
-    align-items: center;
-    width: 100px;
-    z-index: 2;
-  }
+article a::after {
+  position: absolute;
+  inset: 0;
+  cursor: pointer;
+  content: "";
+}
 
-  .side-nav .company-logo {
-    width: 80px;
-    height: 80px;
-    padding: 0.5rem;
-    transition: all ease 0.2s;
-    object-fit: contain; /* Ensure the logo fits within the box */
-  }
+article h2 {
+  margin: 0 0 18px;
+  font-family: "Bebas Neue", cursive;
+  font-size: 1.9rem;
+  letter-spacing: 0.06em;
+  color: black;
+  transition: color 0.3s ease-out;
+}
 
-  .side-nav .company-logo:hover {
-    transform: scale(1.2);
-    filter: drop-shadow(0 0 10px rgb(0, 0, 0));
-  }
+figure {
+  margin: 0;
+  padding: 0;
+  aspect-ratio: 18 / 10;
+  overflow: hidden;
+}
 
-  .side-nav .nav-image {
-    width: 80px;
-    height: 80px;
-    object-fit: cover; /* Ensures the image covers the box without stretching */
-    border-radius: 10px; /* Optional: Add border-radius for aesthetics */
-    transition: transform 0.5s ease;
-  }
+article img {
+  max-width: 100%;
+  transition: transform 0.4s ease-in-out;
+}
 
-  .side-nav a {
-    width: 100%;
-    transition: all ease 0.5s;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; /* Center align the content */
-    color: #000000;
-    text-decoration: none; /* Remove underline from links */
-  }
+.article-body {
+  padding: 24px;
+}
 
-  .side-nav .navigation {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    width: 100%;
-    align-items: center; /* Center align the navigation items */
-  }
+article a {
+  display: inline-flex;
+  align-items: center;
+  text-decoration: none;
+  color: #28666e;
+}
 
-  .side-nav .navigation:hover a:not(:hover) .nav-image {
-    transform: rotateY(180deg) scale(0.7);
-  }
+article a:focus {
+  outline: 1px dotted #28666e;
+}
 
-  .side-nav a.socials {
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Center align the social icon */
-  }
+article a .icon {
+  min-width: 24px;
+  width: 24px;
+  height: 24px;
+  margin-left: 5px;
+  transition: all 0.3s;
+}
 
-  .side-nav a.socials h3 {
-    background: transparent;
-    color: black;
-    padding: 0.3rem 0.7rem;
-    border: black 1px solid;
-    border-radius: 5px;
-    transition: all 0.3s ease;
-  }
+article:hover img {
+  transform: scale(1.1);
+}
 
-  .side-nav a.socials:hover h3 {
-    background: white;
-    border-color: black;
-  }
+article:hover h2 {
+  color: #28666e;
+}
 
-  .icon-link {
+article:hover a .icon {
+  transform: translateX(0);
+  opacity: 1;
+}
 
+
+.articles {
+  display: grid;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 24px;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  gap: 24px;
+}
+
+@media screen and (max-width: 960px) {
+  .article-body p {
+    display: none;
   }
+}
+
+.sr-only:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
