--- a/pages/hero-1/assets/css/style.css
+++ b/pages/hero-1/assets/css/style.css
@@ -17,7 +17,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 300vh;
+    height: 200vw;
     width: 100vw;
     background-repeat: no-repeat;
     background-position: top;
@@ -67,10 +67,9 @@ span {
 .bottom {
   display: flex;
   gap: 1rem;
-  margin-bottom: 3rem;
   filter: invert(1);
   color: #bb7413;
-  margin-bottom: 80%;
+  margin-bottom: 70vw;
   align-items: center;
 
   & .creators {
@@ -80,7 +79,7 @@ span {
 
       & h6 {
           padding: 0;
-          margin: 0;
+          margin-left: none;
           font-weight: 650;
       }
 
@@ -207,6 +206,7 @@ span {
   height: 2px;
   background-color: #333; /* Change to desired color */
   margin: 20px auto; /* Adjust spacing as needed */
+  margin-bottom: 80vw;
 }
 
 
