--- a/pages/hero-2/assets/css/style.css
+++ b/pages/hero-2/assets/css/style.css
@@ -12,14 +12,12 @@ body {
     font-family: "Poppins", sans-serif;
     color: var(--color-secondary-1);
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
     min-height: 100vh;
     height: 300vh;
     width: 100vw;
-    background: url('../../../hero-2/assets/img/deks57y-9df53f9a-a73a-4768-8dcb-10f6e389b440.png') no-repeat center center fixed;
-    background-repeat: no-repeat;
-    background-position: top;
+    background: url('../../../hero-2/assets/img/deks57y-9df53f9a-a73a-4768-8dcb-10f6e389b440.png') no-repeat;
 }
 
 h1,
@@ -44,35 +42,53 @@ span {
     text-align: center;
 }
 
-  .top {
-    position: absolute;
-    top: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 100;
-  }
+.top-section {
+    width: 100%;
+    background-size: cover;
+    padding-bottom: 20px;
+}
 
-  .letters {
+.img-demon {
+  width: auto;
+  height: 6rem;
+  top: 20px;
+  left: 10px;
+  margin-right: 75em;
+}
+
+.top {
+    position: relative;
+    width: 100%;
+    text-align: center;
+    padding-bottom: 20px;
+}
+
+.letters {
     white-space: nowrap;
-    margin-left: 20%;
     font-weight: 600;
     letter-spacing: 0.7rem;
     color: #ef0202;
     font-size: 65px;
     font-family:'Times New Roman', Times, serif;
-    margin-right: 2 0rem;
-  }
+    margin-top: 10px;
+    margin-left: 100px;
+}
 
-  .hero-2 {
-    width: 500px;
+.content-wrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+
+.hero-2 {
+    width: 800px;
     height: 500px;
     position: relative;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
-    position: relative;
-    top: 20%;
-    margin-bottom: 180vh;
+    margin: 20px 0;
 }
 
 .kamado-card {
@@ -96,10 +112,41 @@ span {
 
 .kamado-content h2 {
     margin: 0;
-    font-size: 1.5em;/
+    font-size: 1.5em;
 }
 
 .kamado-content p {
     margin: 10px 0 0;
     font-size: 1.1em;
+}
+
+.separator {
+    width: 100%;
+    height: 2px;
+    background-color: var(--color-secondary-1);
+    margin: 20px 0;
+}
+
+.bottom-section {
+    width: 100%;
+    text-align: center;
+    padding: 50px;
+    background-color: var(--color-primary-1);
+    margin-top: 10em;
+}
+
+.creators {
+    text-align: center;
+}
+
+.creators p {
+    margin: 0;
+    font-size: 14px;
+}
+
+.creators h6 {
+    margin: 0;
+    font-size: 16px;
+    font-weight: bold;
+    color: var(--color-accent-1);
 }
