--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,20 +75,6 @@ span {
   text-decoration: none;
 }
 
-.side-nav {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    left: 0;
-    height: 100vh;
-    justify-content: space-between;
-    background: rgb(255, 255, 255);
-    padding: 0.5rem 0;
-    align-items: center;
-    width: 80px;
-    z-index: 2;
-  }
-
   .side-nav {
     display: flex;
     flex-direction: column;
@@ -96,7 +82,7 @@ span {
     left: 0;
     height: 100vh;
     justify-content: space-between;
-    background: rgb(255, 255, 255);
+    background-image: linear-gradient(0deg, #2f2f62, #ffffff);
     padding: 0.5rem 0;
     align-items: center;
     width: 100px;
@@ -118,7 +104,7 @@ span {
 
   .side-nav .nav-image {
     width: 80px;
-    height: 80px;
+    height: 50px;
     object-fit: cover; /* Ensures the image covers the box without stretching */
     border-radius: 10px; /* Optional: Add border-radius for aesthetics */
     transition: transform 0.5s ease;
