--- a/pages/hero-3/assets/css/style.css
+++ b/pages/hero-3/assets/css/style.css
@@ -11,11 +11,12 @@ body {
     font-family: "Poppins", sans-serif;
     color: var(--color-secondary-1);
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
+    height: 300vh;
     width: 100vw;
-    background: url('../../../hero-3/assets/img/wallpapersden.com_red-denji-art-chainsaw-man_wxl.jpg') no-repeat center center fixed;
+    background: url('../../../hero-3/assets/img/wallpapersden.com_red-denji-art-chainsaw-man_wxl.jpg') no-repeat center fixed;
     background-size: cover;
 }
 
@@ -41,98 +42,91 @@ span {
     text-align: center;
 }
 
-.side-nav {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    left: 0;
-    height: 100vh;
-    justify-content: space-between;
-    background: rgb(255, 255, 255);
-    padding: 0.5rem 0;
-    align-items: center;
-    width: 80px;
-    z-index: 2;
-  }
+.card-denji {
+  width: 200px;
+  background-color: #000000;
+  padding: .4em;
+  border-radius: 6px;
+  margin-top: 12em;
+}
 
-  .side-nav {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    left: 0;
-    height: 100vh;
-    justify-content: space-between;
-    background: rgb(255, 255, 255);
-    padding: 0.5rem 0;
-    align-items: center;
-    width: 100px;
-    z-index: 2;
-  }
+.card-image-denji {
+  width: 100%;
+  height: 200px; /* Fixed height */
+  overflow: hidden; /* Hide overflow */
+  border-radius: 10px 6px 0 0;
+}
 
-  .side-nav .company-logo {
-    width: 80px;
-    height: 80px;
-    padding: 0.5rem;
-    transition: all ease 0.2s;
-    object-fit: contain; /* Ensure the logo fits within the box */
-  }
+.denji-img {
+  width: 5%;
+  height: 5%;
+  object-fit: contain; /* Ensure the entire image fits within the container */
+  object-position: top; /* Adjust the position to show the top part of the image */
+  border-radius: 10px 6px 0 0;
+}
 
-  .side-nav .company-logo:hover {
-    transform: scale(1.2);
-    filter: drop-shadow(0 0 10px rgb(0, 0, 0));
-  }
+.category {
+  text-transform: uppercase;
+  font-size: 0.7em;
+  font-weight: 600;
+  color: rgb(255, 255, 255);
+  padding: 10px 7px 0;
+}
 
-  .side-nav .nav-image {
-    width: 80px;
-    height: 80px;
-    object-fit: cover; /* Ensures the image covers the box without stretching */
-    border-radius: 10px; /* Optional: Add border-radius for aesthetics */
-    transition: transform 0.5s ease;
-  }
+.category:hover {
+  cursor: pointer;
+}
 
-  .side-nav a {
-    width: 100%;
-    transition: all ease 0.5s;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center; /* Center align the content */
-    color: #000000;
-    text-decoration: none; /* Remove underline from links */
-  }
+.heading {
+  font-weight: 600;
+  color: rgb(255, 255, 255);
+  padding: 7px;
+}
 
-  .side-nav .navigation {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    width: 100%;
-    align-items: center; /* Center align the navigation items */
-  }
+.heading:hover {
+  cursor: pointer;
+}
 
-  .side-nav .navigation:hover a:not(:hover) .nav-image {
-    transform: rotateY(180deg) scale(0.7);
-  }
+.author {
+  color: gray;
+  font-weight: 400;
+  font-size: 11px;
+  padding-top: 20px;
+}
 
-  .side-nav a.socials {
-    display: flex;
-    flex-direction: column;
-    align-items: center; /* Center align the social icon */
-  }
+.name {
+  font-weight: 600;
+}
 
-  .side-nav a.socials h3 {
-    background: transparent;
-    color: black;
-    padding: 0.3rem 0.7rem;
-    border: black 1px solid;
-    border-radius: 5px;
-    transition: all 0.3s ease;
-  }
+.separator {
+  width: 100%;
+  height: 2px;
+  background-color: var(--color-secondary-1);
+  margin: 20px 0;
+  margin-top: 30em;
+}
 
-  .side-nav a.socials:hover h3 {
-    background: white;
-    border-color: black;
-  }
+.bottom-section {
+  width: 100%;
+  text-align: center;
+  padding: 50px;
+  background-color: var(--color-primary-1);
+  margin-top: 10em;
+}
 
-  .icon-link {
+.creators {
+  text-align: center;
+}
 
-  }
+.creators p {
+  margin: 0;
+  font-size: 14px;
+}
+
+.creators h6 {
+  margin: 0;
+  font-size: 16px;
+  font-weight: bold;
+  color: var(--color-accent-1);
+}
+
