--- a/pages/hero-4/assets/css/Navigation.css
+++ b/pages/hero-4/assets/css/Navigation.css
@@ -29,7 +29,7 @@
 
 .side-nav .nav-image {
   width: 80px;
-  height: 80px;
+  height: 50px;
   object-fit: cover;
   border-radius: 10px;
   transition: transform 0.5s ease;
@@ -42,9 +42,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color:#fff;
+  color: #000000;
   text-decoration: none;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .side-nav .navigation {
@@ -83,6 +82,6 @@
 }
 
 .content-wrapper {
-  margin-left: 100px; /* Ensure content does not overlap with side-nav */
+  margin-left: 100px;
   padding: 20px;
 }
