--- a/pages/hero-4/assets/css/style.css
+++ b/pages/hero-4/assets/css/style.css
@@ -40,21 +40,41 @@ h1 * {
 
 span {
     text-align: center;
-    font-size: 20px;
+    font-size: 15px;
     color: #3A3A3A;
+}
+
+.scouting-logo {
+  width: auto;
+  height: 6rem;
+  top: 20px;
+  left: 10px;
+  margin-right: 35em;
+  margin-top: 28em;
+}
+
+.articles {
+  display: grid;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 24px;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  gap: 24px;
+  justify-content: start;
 }
 
 article {
   position: relative;
-  margin-left: 10px;
+  margin-left: 0; /* Align to the left */
   border-radius: 16px;
   background: #dfdfdf;
   transition: all 0.4s ease-in-out;
   overflow: hidden;
   box-shadow: none;
   top: 20%;
-  margin-bottom: 180rem;
+  margin-bottom: 170rem;
 }
+
 
 article a::after {
   position: absolute;
