--- a/pages/hero-2/assets/css/Navigation.css
+++ b/pages/hero-2/assets/css/Navigation.css
@@ -7,7 +7,7 @@
   top: 0;
   height: 100vh;
   justify-content: space-between;
-  background-image: linear-gradient(0deg, #0d046b, #2e2424);
+  background-image: linear-gradient(0deg, #2757be, #ffffff);
   padding: 0.5rem 0;
   align-items: center;
   width: 100px;
@@ -36,15 +36,14 @@
 }
 
 .side-nav a {
-  width: 60%;
+  width: 100%;
   transition: all ease 0.5s;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: #ffffff;
+  color: #000000;
   text-decoration: none;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .side-nav .navigation {
@@ -52,17 +51,11 @@
   flex-direction: column;
   gap: 1rem;
   width: 100%;
-  align-items: center;
+  align-items: center; /* Center align the navigation items */
 }
 
 .side-nav .navigation:hover a:not(:hover) .nav-image {
   transform: rotateY(180deg) scale(0.7);
-}
-
-.side-nav .socials {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .side-nav .socials .icon-link {
