--- a/pages/hero-4/assets/css/Navigation.css
+++ b/pages/hero-4/assets/css/Navigation.css
@@ -7,7 +7,7 @@
   top: 0;
   height: 100vh;
   justify-content: space-between;
-  background-image: linear-gradient(0deg, #144327, #ffffff);
+  background-image: linear-gradient(0deg, #164725, #ffffff);
   padding: 0.5rem 0;
   align-items: center;
   width: 100px;
@@ -51,17 +51,11 @@
   flex-direction: column;
   gap: 1rem;
   width: 100%;
-  align-items: center;
+  align-items: center; /* Center align the navigation items */
 }
 
 .side-nav .navigation:hover a:not(:hover) .nav-image {
   transform: rotateY(180deg) scale(0.7);
-}
-
-.side-nav .socials {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .side-nav .socials .icon-link {
