--- a/pages/hero-1/assets/css/style.css
+++ b/pages/hero-1/assets/css/style.css
@@ -94,6 +94,7 @@ span {
   margin-left: 20%;
   font-weight: 600;
   letter-spacing: 0.7rem;
+  margin-bottom: 20%;
   color: #FFFFFF; /* Set text color */
   font-size: 24px; /* Adjust font size */
   font-family: "Abril Fatface", serif; /* Ensure correct font family */
